snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.pom.md5
c2b1dfcd544a09d52ccb44d84368bceb